--- a/FantasyEfmo.html
+++ b/FantasyEfmo.html
@@ -847,7 +847,8 @@
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
-        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'}
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}
       ]},
 
     { id:2, name:'Gabri', pos:'Portero', status:'OK', special: false, performances:[
@@ -865,7 +866,8 @@
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
         {points:0, minutes:90, goals:0, assists:0, cards:0, comment:'(6,0)'},
         {points:1, minutes:90, goals:0, assists:0, cards:0, comment:'(6,3)'},
-        {points:4, minutes:90, goals:0, assists:0, cards:0, comment:'(6,8)'}
+        {points:4, minutes:90, goals:0, assists:0, cards:0, comment:'(6,8)'},
+        {points:11, minutes:90, goals:0, assists:0, cards:0, comment:'(9,0)'}
       ]},
 
     { id:3, name:'Álvaro', pos:'Portero', status:'OK', special: false, performances:[
@@ -883,7 +885,8 @@
         {points:-3, minutes:90, goals:0, assists:0, cards:0, comment:'(5,0)'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
-        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'}
       ]},
 
     { id:4, name:'Luisja', pos:'Defensa', status:'OK', special: false, performances:[
@@ -901,7 +904,8 @@
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:5, minutes:90, goals:0, assists:0, cards:0, comment:'(7,0)'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
-        {points:10, minutes:90, goals:0, assists:0, cards:1, comment:'🟨 (8,1)'}
+        {points:10, minutes:90, goals:0, assists:0, cards:1, comment:'🟨 (8,1)'},
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'}
       ]},
 
     { id:5, name:'J. Martínez', pos:'Centrocampista', status:'OK', special: false, performances:[
@@ -919,7 +923,8 @@
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:3, minutes:90, goals:0, assists:0, cards:0, comment:'(6,6)'},
-        {points:5, minutes:90, goals:0, assists:0, cards:1, comment:'🟨 (7,1)'}
+        {points:5, minutes:90, goals:0, assists:0, cards:1, comment:'🟨 (7,1)'},
+        {points:4, minutes:90, goals:0, assists:0, cards:0, comment:'(6,9)'}
       ]},
 
     { id:6, name:'Rafa Crooke', pos:'Defensa', status:'OK', special: false, performances:[
@@ -937,7 +942,8 @@
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
-        {points:6, minutes:90, goals:0, assists:0, cards:0, comment:'(7,3)'}
+        {points:6, minutes:90, goals:0, assists:0, cards:0, comment:'(7,3)'},
+        {points:5, minutes:90, goals:0, assists:0, cards:1, comment:'🟨 (7,1)'}
       ]},
 
     { id:7, name:'Jacobo', pos:'Defensa', status:'OK', special: false, performances:[
@@ -955,7 +961,8 @@
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
         {points:4, minutes:82, goals:0, assists:0, cards:0, comment:'↪️ (6,8)'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
-        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'}
       ]},
 
     { id:8, name:'Rodri', pos:'Defensa', status:'OK', special: false, performances:[
@@ -973,7 +980,8 @@
         {points:-2, minutes:90, goals:0, assists:0, cards:0, comment:'(5,6)'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
         {points:2, minutes:90, goals:0, assists:0, cards:1, comment:'🟨 (6,4)'},
-        {points:4, minutes:29, goals:0, assists:0, cards:0, comment:'↩️ (6,8)'}
+        {points:4, minutes:29, goals:0, assists:0, cards:0, comment:'↩️ (6,8)'},
+        {points:6, minutes:64, goals:0, assists:0, cards:0, comment:'↪️ (7,2)'}
       ]},
 
     { id:9, name:'Adriano', pos:'Defensa', status:'Lesionado', special: false, performances:[
@@ -991,7 +999,8 @@
         {points:-1, minutes:90, goals:0, assists:0, cards:0, comment:'(5,8)'},
         {points:2, minutes:90, goals:0, assists:0, cards:0, comment:'(6,4)'},
         {points:4, minutes:90, goals:0, assists:0, cards:0, comment:'(6,8)'},
-        {points:7, minutes:61, goals:0, assists:0, cards:0, comment:'↪️ (7,5)'}
+        {points:7, minutes:61, goals:0, assists:0, cards:0, comment:'↪️ (7,5)'},
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'}
       ]},
 
     { id:10, name:'Á. Infante', pos:'Defensa', status:'OK', special: false, performances:[
@@ -1009,7 +1018,8 @@
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
         {points:3, minutes:8, goals:0, assists:0, cards:0, comment:'↩️ (6,6)'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
-        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'}
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}
       ]},
 
     { id:11, name:'A. Molina', pos:'Centrocampista', status:'OK', special: false, performances:[
@@ -1027,7 +1037,8 @@
         {points:5, minutes:90, goals:0, assists:1, cards:0, comment:'🅰️ (6,8+🅰️)'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:2, minutes:17, goals:0, assists:0, cards:0, comment:'↩️ (6,4)'},
-        {points:4, minutes:61, goals:0, assists:0, cards:0, comment:'↪️ (6,8)'}
+        {points:4, minutes:61, goals:0, assists:0, cards:0, comment:'↪️ (6,8)'},
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'}
       ]},
 
     { id:12, name:'L. Lausín', pos:'Centrocampista', status:'Duda', special: false, performances:[
@@ -1045,7 +1056,8 @@
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
-        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
+        {points:7, minutes:70, goals:0, assists:1, cards:0, comment:'↪️🅰️ (7,2+🅰️)'}
       ]},
 
     { id:13, name:'J. Zarcero', pos:'Defensa', status:'Lesionado', special: false, performances:[
@@ -1063,6 +1075,7 @@
         {points:1, minutes:90, goals:0, assists:0, cards:0, comment:'(6,2)'},
         {points:4, minutes:90, goals:0, assists:0, cards:0, comment:'(6,9)'},
         {points:5, minutes:79, goals:0, assists:0, cards:1, comment:'🟨↪️ (7,0)'},
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'}
       ]},
 
@@ -1081,7 +1094,8 @@
         {points:3, minutes:33, goals:0, assists:0, cards:0, comment:'↩️ (6,7)'},
         {points:11, minutes:74, goals:1, assists:0, cards:0, comment:'↪️⚽ (7,6+⚽)'},
         {points:6, minutes:90, goals:0, assists:1, cards:1, comment:'🟨🅰️ (7,0+🅰️)'},
-        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Sancionado'}
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Sancionado'},
+        {points:5, minutes:90, goals:0, assists:0, cards:1, comment:'🟨 (7,0)'}
       ]},
 
     { id:15, name:'Víctor Jaén', pos:'Centrocampista', status:'OK', special: false, performances:[
@@ -1099,7 +1113,8 @@
         {points:2, minutes:16, goals:0, assists:0, cards:0, comment:'↩️ (6,4)'},
         {points:2, minutes:8, goals:0, assists:0, cards:0, comment:'↩️ (6,4)'},
         {points:-1, minutes:11, goals:0, assists:0, cards:0, comment:'↩️ (5,9)'},
-        {points:1, minutes:29, goals:0, assists:0, cards:1, comment:'🟨↩️ (6,3)'}
+        {points:1, minutes:29, goals:0, assists:0, cards:1, comment:'🟨↩️ (6,3)'},
+        {points:10, minutes:90, goals:1, assists:0, cards:0, comment:'⚽ (7,2+⚽)'}
       ]},
 
     { id:16, name:'Á. Brito', pos:'Centrocampista', status:'Duda', special: false, performances:[
@@ -1117,7 +1132,8 @@
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
         {points:6, minutes:90, goals:0, assists:0, cards:0, comment:'(7,3)'},
         {points:5, minutes:73, goals:0, assists:0, cards:0, comment:'↪️ (7,0)'},
-        {points:7, minutes:79, goals:0, assists:0, cards:0, comment:'↪️ (7,5)'}
+        {points:7, minutes:79, goals:0, assists:0, cards:0, comment:'↪️ (7,5)'},
+        {points:9, minutes:90, goals:0, assists:0, cards:0, comment:'(7,8)'}
       ]},
 
     { id:17, name:'Pablo', pos:'Centrocampista', status:'Lesionado', special: false, performances:[
@@ -1135,6 +1151,7 @@
         {points:1, minutes:90, goals:0, assists:0, cards:0, comment:'(6,2)'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
         {points:2, minutes:45, goals:0, assists:0, cards:0, comment:'↩️ (6,4)'},
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'}
       ]},
 
@@ -1153,7 +1170,8 @@
         {points:1, minutes:74, goals:0, assists:0, cards:0, comment:'↪️ (6,3)'},
         {points:2, minutes:90, goals:0, assists:0, cards:1, comment:'🟨 (6,5)'},
         {points:4, minutes:73, goals:0, assists:0, cards:0, comment:'↪️ (6,9)'},
-        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'}
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
+        {points:4, minutes:90, goals:0, assists:0, cards:0, comment:'(6,8)'}
       ]},
 
     { id:19, name:'Mario', pos:'Centrocampista', status:'OK', special: false, performances:[
@@ -1171,7 +1189,8 @@
         {points:5, minutes:90, goals:0, assists:0, cards:0, comment:'(7,0)'},
         {points:3, minutes:16, goals:0, assists:0, cards:0, comment:'↩️ (6,6)'},
         {points:1, minutes:17, goals:0, assists:0, cards:0, comment:'↩️ (6,2)'},
-        {points:5, minutes:90, goals:0, assists:0, cards:0, comment:'(7,1)'}
+        {points:5, minutes:90, goals:0, assists:0, cards:0, comment:'(7,1)'},
+        {points:1, minutes:26, goals:0, assists:0, cards:1, comment:'🟨↩️ (6,3)'}
       ]},
 
     { id:20, name:'J. Ogayar', pos:'Centrocampista', status:'OK', special: false, performances:[
@@ -1189,7 +1208,8 @@
         {points:9, minutes:90, goals:1, assists:0, cards:0, comment:'⚽ (7,2+⚽)'},
         {points:5, minutes:90, goals:0, assists:0, cards:0, comment:'(7,0)'},
         {points:1, minutes:90, goals:0, assists:0, cards:0, comment:'(6,2)'},
-        {points:3, minutes:90, goals:0, assists:0, cards:0, comment:'(6,6)'}
+        {points:3, minutes:90, goals:0, assists:0, cards:0, comment:'(6,6)'},
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'}
       ]},
 
     { id:21, name:'Rodri de Castro', pos:'Atacante', status:'OK', special: false, performances:[
@@ -1207,7 +1227,8 @@
         {points:3, minutes:57, goals:0, assists:0, cards:0, comment:'↪️ (6,7)'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
         {points:0, minutes:45, goals:0, assists:0, cards:1, comment:'🟨↪️ (6,0)'},
-        {points:1, minutes:61, goals:0, assists:0, cards:1, comment:'🟨↪️ (6,2)'}
+        {points:1, minutes:61, goals:0, assists:0, cards:1, comment:'🟨↪️ (6,2)'},
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'}
       ]},
 
     { id:22, name:'H. Panizo', pos:'Atacante', status:'Lesionado', special: false, performances:[
@@ -1224,6 +1245,7 @@
         {points:null, minutes:8, goals:0, assists:0, cards:0, comment:'↩️ (-)'},
         {points:4, minutes:74, goals:0, assists:0, cards:0, comment:'↪️ (6,8)'},
         {points:9, minutes:82, goals:0, assists:1, cards:0, comment:'↪️🅰️ (7,6+🅰️)'},
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'}
       ]},
@@ -1243,7 +1265,8 @@
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
-        {points:2, minutes:11, goals:0, assists:0, cards:0, comment:'↩️ (6,5)'}
+        {points:2, minutes:11, goals:0, assists:0, cards:0, comment:'↩️ (6,5)'},
+        {points:1, minutes:20, goals:0, assists:0, cards:0, comment:'↩️ (6,2)'}
       ]},
 
     { id:24, name:'Manu de V.', pos:'Atacante', status:'OK', special: false, performances:[
@@ -1262,6 +1285,7 @@
         {points:2, minutes:32, goals:0, assists:0, cards:0, comment:'↩️ (6,4)'},
         {points:1, minutes:59, goals:0, assists:0, cards:0, comment:'↪️ (6,2)'},
         {points:0, minutes:90, goals:0, assists:0, cards:1, comment:'🟨 (6,0)'},
+        {points:2, minutes:64, goals:0, assists:0, cards:0, comment:'↪️ (6,4)'}
       ]},
 
     { id:25, name:'S. Griñán', pos:'Atacante', status:'OK', special: false, performances:[
@@ -1279,7 +1303,8 @@
         {points:2, minutes:16, goals:0, assists:0, cards:0, comment:'↩️ (6,4)'},
         {points:2, minutes:58, goals:0, assists:0, cards:0, comment:'↪️ (6,5)'},
         {points:9, minutes:31, goals:1, assists:0, cards:0, comment:'↩️⚽ (7,2+⚽)'},
-        {points:2, minutes:29, goals:0, assists:0, cards:0, comment:'↩️ (6,5)'}
+        {points:2, minutes:29, goals:0, assists:0, cards:0, comment:'↩️ (6,5)'},
+        {points:1, minutes:26, goals:0, assists:0, cards:0, comment:'↩️ (6,3)'}
       ]},
 
     { id:26, name:'Manu (JB)', pos:'Defensa', status:'OK', special: true, performances:[
@@ -1290,6 +1315,7 @@
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'En el JB'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'En el JB'},
         {points:3, minutes:29, goals:0, assists:0, cards:0, comment:'↩️ (6,6)'},
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'En el JB'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'En el JB'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'En el JB'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'En el JB'},
@@ -1314,7 +1340,8 @@
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'En el JB'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'En el JB'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'En el JB'},
-        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'En el JB'}
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'En el JB'},
+        {points:-4, minutes:89, goals:0, assists:0, cards:0, comment:'🟥 (6,4+🟥)'}
       ]}
   ];
   
