--- a/InformeJ16.html
+++ b/InformeJ16.html
@@ -617,7 +617,7 @@
 
   <div class="header-informe">
     <h1>Informe Jornada 16</h1> <!-- Añadir nº de jornada -->
-    <div class="resultado-principal">EFMO Boadilla 'B' - CF Rayo Majadahonda 'B'</div> <!-- Añadir rival y resultado -->
+    <div class="resultado-principal">EFMO Boadilla 'B' 1-2 CF Rayo Majadahonda 'B'</div> <!-- Añadir rival y resultado -->
   </div>
 
   <!-- Alineación Probable -->
