--- a/InformeJ17.html
+++ b/InformeJ17.html
@@ -645,14 +645,14 @@
           { number: '16', name: 'Luisja' },
           { number: '25', name: 'Rodri' },
           { number: '6', name: 'Rafa' },
-          { number: '7', name: 'J. Martínez' }
+          { number: '12', name: 'L. Lausín' }
         ], //El último sin coma
         'mediocentros': [
-          { number: '12', name: 'L. Lausín' },
+          { number: '10', name: 'Kito' },
           { number: '2', name: 'Á. Brito' },
+          { number: '14', name: 'J. Ogayar' },
           { number: '23', name: 'Javi Pardo' },
-          { number: '21', name: 'Víctor Jaén' },
-          { number: '10', name: 'Kito' }
+          { number: '8', name: 'Rodri de Castro' }
         ], //El último sin coma
         'delanteros': [
           { number: '18', name: 'Manu de V.' }
