--- a/InformeJ17.html
+++ b/InformeJ17.html
@@ -737,35 +737,35 @@
       // '🟨' '🟥' '🔴🅿️' '🔴' '🧤'
       const playersConfirmada = {
         'portero': [
-          { number: '1', name: 'Gabri', rating: ' - ', goals: 0, assists: 0, cards: null }
+          { number: '1', name: 'Gabri', rating: '-', goals: 0, assists: 0, cards: null }
         ],
         'defensas': [
-          { number: '16', name: 'Luisja', rating: '00', goals: 1, assists: 0, cards: null },
-          { number: '25', name: 'Rodri', rating: '00', goals: 0, assists: 0, cards: null },
-          { number: '6', name: 'Rafa', rating: '00', goals: 0, assists: 0, cards: '🟨' },
-          { number: '20', name: 'A. Molina', rating: '00', goals: 0, assists: 0, cards: null }
+          { number: '16', name: 'Luisja', rating: '-', goals: 1, assists: 0, cards: null },
+          { number: '25', name: 'Rodri', rating: '-', goals: 0, assists: 0, cards: null },
+          { number: '6', name: 'Rafa', rating: '-', goals: 0, assists: 0, cards: '🟨' },
+          { number: '20', name: 'A. Molina', rating: '-', goals: 0, assists: 0, cards: null }
         ], //El último sin coma
         'mediocentros': [
-          { number: '12', name: 'L. Lausín', rating: '00', goals: 0, assists: 0, cards: null },
-          { number: '21', name: 'Víctor Jaén', rating: '00', goals: 1, assists: 0, cards: null },
-          { number: '23', name: 'Javi Pardo', rating: '00', goals: 0, assists: 0, cards: null },
-          { number: '2', name: 'Á. Brito', rating: '00', goals: 0, assists: 0, cards: '🟨' },
-          { number: '10', name: 'Kito', rating: '00', goals: 1, assists: 0, cards: null }
+          { number: '12', name: 'L. Lausín', rating: '-', goals: 0, assists: 0, cards: null },
+          { number: '21', name: 'Víctor Jaén', rating: '-', goals: 1, assists: 0, cards: null },
+          { number: '23', name: 'Javi Pardo', rating: '-', goals: 0, assists: 0, cards: null },
+          { number: '2', name: 'Á. Brito', rating: '-', goals: 0, assists: 0, cards: '🟨' },
+          { number: '10', name: 'Kito', rating: '-', goals: 1, assists: 0, cards: null }
         ], //El último sin coma
         'delanteros': [
-          { number: '18', name: 'Manu de V.', rating: '00', goals: 0, assists: 0, cards: '🟨' }
+          { number: '18', name: 'Manu de V.', rating: '-', goals: 0, assists: 0, cards: '🟨' }
         ] //El último sin coma
       };
 
       // Datos del banquillo - MODIFICADO: Agregar campo 'cards'
       const benchPlayers = [
         { number: '22', name: 'J. Agudo', rating: '-', goals: 0, assists: 0, cards: null },
-        { number: '15', name: 'Jacobo', rating: '00', goals: 0, assists: 0, cards: '🟨' },
-        { number: '3', name: 'Mario', rating: '00', goals: 0, assists: 0, cards: null },
-        { number: '19', name: 'Pablo', rating: '00', goals: 0, assists: 0, cards: '🟨' },
-        { number: '14', name: 'J. Ogayar', rating: '00', goals: 0, assists: 0, cards: null },
-        { number: '8', name: 'Rodri de Castro', rating: '00', goals: 0, assists: 0, cards: null },
-        { number: '9', name: 'S. Griñán', rating: '00', goals: 0, assists: 0, cards: null }
+        { number: '15', name: 'Jacobo', rating: '-', goals: 0, assists: 0, cards: '🟨' },
+        { number: '3', name: 'Mario', rating: '-', goals: 0, assists: 0, cards: null },
+        { number: '19', name: 'Pablo', rating: '-', goals: 0, assists: 0, cards: '🟨' },
+        { number: '14', name: 'J. Ogayar', rating: '-', goals: 0, assists: 0, cards: null },
+        { number: '8', name: 'Rodri de Castro', rating: '-', goals: 0, assists: 0, cards: null },
+        { number: '9', name: 'S. Griñán', rating: '-', goals: 0, assists: 0, cards: null }
       ]; //El último sin coma
 
       // Configuraciones de formaciones <!-- Cambiar formación en caso necesario -->
