--- a/FantasyEfmo.html
+++ b/FantasyEfmo.html
@@ -848,6 +848,7 @@
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}
       ]},
 
@@ -867,7 +868,8 @@
         {points:0, minutes:90, goals:0, assists:0, cards:0, comment:'(6,0)'},
         {points:1, minutes:90, goals:0, assists:0, cards:0, comment:'(6,3)'},
         {points:4, minutes:90, goals:0, assists:0, cards:0, comment:'(6,8)'},
-        {points:11, minutes:90, goals:0, assists:0, cards:0, comment:'(9,0)'}
+        {points:11, minutes:90, goals:0, assists:0, cards:0, comment:'(9,0)'},
+        {points:null, minutes:90, goals:0, assists:0, cards:0, comment:'(-)'}
       ]},
 
     { id:3, name:'Álvaro', pos:'Portero', status:'OK', special: false, performances:[
@@ -886,6 +888,7 @@
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'}
       ]},
 
@@ -905,7 +908,8 @@
         {points:5, minutes:90, goals:0, assists:0, cards:0, comment:'(7,0)'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
         {points:10, minutes:90, goals:0, assists:0, cards:1, comment:'🟨 (8,1)'},
-        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'}
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
+        {points:null, minutes:90, goals:1, assists:0, cards:0, comment:'⚽ (0,0+⚽)'}
       ]},
 
     { id:5, name:'J. Martínez', pos:'Centrocampista', status:'OK', special: false, performances:[
@@ -924,7 +928,8 @@
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:3, minutes:90, goals:0, assists:0, cards:0, comment:'(6,6)'},
         {points:5, minutes:90, goals:0, assists:0, cards:1, comment:'🟨 (7,1)'},
-        {points:4, minutes:90, goals:0, assists:0, cards:0, comment:'(6,9)'}
+        {points:4, minutes:90, goals:0, assists:0, cards:0, comment:'(6,9)'},
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'}
       ]},
 
     { id:6, name:'Rafa Crooke', pos:'Defensa', status:'OK', special: false, performances:[
@@ -943,7 +948,8 @@
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
         {points:6, minutes:90, goals:0, assists:0, cards:0, comment:'(7,3)'},
-        {points:5, minutes:90, goals:0, assists:0, cards:1, comment:'🟨 (7,1)'}
+        {points:5, minutes:90, goals:0, assists:0, cards:1, comment:'🟨 (7,1)'},
+        {points:null, minutes:90, goals:0, assists:0, cards:1, comment:'🟨 (-)'}
       ]},
 
     { id:7, name:'Jacobo', pos:'Defensa', status:'OK', special: false, performances:[
@@ -962,7 +968,8 @@
         {points:4, minutes:82, goals:0, assists:0, cards:0, comment:'↪️ (6,8)'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
-        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'}
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
+        {points:null, minutes:26, goals:0, assists:0, cards:1, comment:'🟨↩️ (-)'}
       ]},
 
     { id:8, name:'Rodri', pos:'Defensa', status:'OK', special: false, performances:[
@@ -981,7 +988,8 @@
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
         {points:2, minutes:90, goals:0, assists:0, cards:1, comment:'🟨 (6,4)'},
         {points:4, minutes:29, goals:0, assists:0, cards:0, comment:'↩️ (6,8)'},
-        {points:6, minutes:64, goals:0, assists:0, cards:0, comment:'↪️ (7,2)'}
+        {points:6, minutes:64, goals:0, assists:0, cards:0, comment:'↪️ (7,2)'},
+        {points:null, minutes:90, goals:0, assists:0, cards:0, comment:'(-)'}
       ]},
 
     { id:9, name:'Adriano', pos:'Defensa', status:'Lesionado', special: false, performances:[
@@ -1000,6 +1008,7 @@
         {points:2, minutes:90, goals:0, assists:0, cards:0, comment:'(6,4)'},
         {points:4, minutes:90, goals:0, assists:0, cards:0, comment:'(6,8)'},
         {points:7, minutes:61, goals:0, assists:0, cards:0, comment:'↪️ (7,5)'},
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'}
       ]},
 
@@ -1019,7 +1028,8 @@
         {points:3, minutes:8, goals:0, assists:0, cards:0, comment:'↩️ (6,6)'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
-        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'}
       ]},
 
     { id:11, name:'A. Molina', pos:'Centrocampista', status:'OK', special: false, performances:[
@@ -1038,7 +1048,8 @@
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:2, minutes:17, goals:0, assists:0, cards:0, comment:'↩️ (6,4)'},
         {points:4, minutes:61, goals:0, assists:0, cards:0, comment:'↪️ (6,8)'},
-        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'}
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
+        {points:null, minutes:90, goals:0, assists:0, cards:0, comment:'(-)'}
       ]},
 
     { id:12, name:'L. Lausín', pos:'Centrocampista', status:'Duda', special: false, performances:[
@@ -1057,7 +1068,8 @@
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
-        {points:7, minutes:70, goals:0, assists:1, cards:0, comment:'↪️🅰️ (7,2+🅰️)'}
+        {points:7, minutes:70, goals:0, assists:1, cards:0, comment:'↪️🅰️ (7,2+🅰️)'},
+        {points:null, minutes:64, goals:0, assists:0, cards:0, comment:'↪️ (-)'}
       ]},
 
     { id:13, name:'J. Zarcero', pos:'Defensa', status:'Lesionado', special: false, performances:[
@@ -1075,6 +1087,7 @@
         {points:1, minutes:90, goals:0, assists:0, cards:0, comment:'(6,2)'},
         {points:4, minutes:90, goals:0, assists:0, cards:0, comment:'(6,9)'},
         {points:5, minutes:79, goals:0, assists:0, cards:1, comment:'🟨↪️ (7,0)'},
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'}
       ]},
@@ -1095,7 +1108,8 @@
         {points:11, minutes:74, goals:1, assists:0, cards:0, comment:'↪️⚽ (7,6+⚽)'},
         {points:6, minutes:90, goals:0, assists:1, cards:1, comment:'🟨🅰️ (7,0+🅰️)'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Sancionado'},
-        {points:5, minutes:90, goals:0, assists:0, cards:1, comment:'🟨 (7,0)'}
+        {points:5, minutes:90, goals:0, assists:0, cards:1, comment:'🟨 (7,0)'},
+        {points:null, minutes:64, goals:1, assists:0, cards:0, comment:'↪️⚽🅿️ (0,0+⚽🅿️)'}
       ]},
 
     { id:15, name:'Víctor Jaén', pos:'Centrocampista', status:'OK', special: false, performances:[
@@ -1114,7 +1128,8 @@
         {points:2, minutes:8, goals:0, assists:0, cards:0, comment:'↩️ (6,4)'},
         {points:-1, minutes:11, goals:0, assists:0, cards:0, comment:'↩️ (5,9)'},
         {points:1, minutes:29, goals:0, assists:0, cards:1, comment:'🟨↩️ (6,3)'},
-        {points:10, minutes:90, goals:1, assists:0, cards:0, comment:'⚽ (7,2+⚽)'}
+        {points:10, minutes:90, goals:1, assists:0, cards:0, comment:'⚽ (7,2+⚽)'},
+        {points:null, minutes:45, goals:1, assists:0, cards:0, comment:'↪️⚽ (0,0+⚽)'}
       ]},
 
     { id:16, name:'Á. Brito', pos:'Centrocampista', status:'Duda', special: false, performances:[
@@ -1133,7 +1148,8 @@
         {points:6, minutes:90, goals:0, assists:0, cards:0, comment:'(7,3)'},
         {points:5, minutes:73, goals:0, assists:0, cards:0, comment:'↪️ (7,0)'},
         {points:7, minutes:79, goals:0, assists:0, cards:0, comment:'↪️ (7,5)'},
-        {points:9, minutes:90, goals:0, assists:0, cards:0, comment:'(7,8)'}
+        {points:9, minutes:90, goals:0, assists:0, cards:0, comment:'(7,8)'},
+        {points:null, minutes:45, goals:0, assists:0, cards:1, comment:'🟨↪️ (-)'}
       ]},
 
     { id:17, name:'Pablo', pos:'Centrocampista', status:'Lesionado', special: false, performances:[
@@ -1152,7 +1168,8 @@
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
         {points:2, minutes:45, goals:0, assists:0, cards:0, comment:'↩️ (6,4)'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
-        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'}
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
+        {points:null, minutes:45, goals:0, assists:0, cards:1, comment:'🟨↩️ (-)'}
       ]},
 
     { id:18, name:'Javi Pardo', pos:'Centrocampista', status:'OK', special: false, performances:[
@@ -1171,7 +1188,8 @@
         {points:2, minutes:90, goals:0, assists:0, cards:1, comment:'🟨 (6,5)'},
         {points:4, minutes:73, goals:0, assists:0, cards:0, comment:'↪️ (6,9)'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
-        {points:4, minutes:90, goals:0, assists:0, cards:0, comment:'(6,8)'}
+        {points:4, minutes:90, goals:0, assists:0, cards:0, comment:'(6,8)'},
+        {points:null, minutes:64, goals:0, assists:0, cards:0, comment:'↪️ (-)'}
       ]},
 
     { id:19, name:'Mario', pos:'Centrocampista', status:'OK', special: false, performances:[
@@ -1190,7 +1208,8 @@
         {points:3, minutes:16, goals:0, assists:0, cards:0, comment:'↩️ (6,6)'},
         {points:1, minutes:17, goals:0, assists:0, cards:0, comment:'↩️ (6,2)'},
         {points:5, minutes:90, goals:0, assists:0, cards:0, comment:'(7,1)'},
-        {points:1, minutes:26, goals:0, assists:0, cards:1, comment:'🟨↩️ (6,3)'}
+        {points:1, minutes:26, goals:0, assists:0, cards:1, comment:'🟨↩️ (6,3)'},
+        {points:null, minutes:26, goals:0, assists:0, cards:0, comment:'↩️ (-)'}
       ]},
 
     { id:20, name:'J. Ogayar', pos:'Centrocampista', status:'OK', special: false, performances:[
@@ -1209,7 +1228,8 @@
         {points:5, minutes:90, goals:0, assists:0, cards:0, comment:'(7,0)'},
         {points:1, minutes:90, goals:0, assists:0, cards:0, comment:'(6,2)'},
         {points:3, minutes:90, goals:0, assists:0, cards:0, comment:'(6,6)'},
-        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'}
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
+        {points:null, minutes:45, goals:0, assists:0, cards:0, comment:'↩️ (-)'}
       ]},
 
     { id:21, name:'Rodri de Castro', pos:'Atacante', status:'OK', special: false, performances:[
@@ -1228,7 +1248,8 @@
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
         {points:0, minutes:45, goals:0, assists:0, cards:1, comment:'🟨↪️ (6,0)'},
         {points:1, minutes:61, goals:0, assists:0, cards:1, comment:'🟨↪️ (6,2)'},
-        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'}
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
+        {points:null, minutes:26, goals:0, assists:0, cards:0, comment:'↩️ (-)'}
       ]},
 
     { id:22, name:'H. Panizo', pos:'Atacante', status:'Lesionado', special: false, performances:[
@@ -1245,6 +1266,7 @@
         {points:null, minutes:8, goals:0, assists:0, cards:0, comment:'↩️ (-)'},
         {points:4, minutes:74, goals:0, assists:0, cards:0, comment:'↪️ (6,8)'},
         {points:9, minutes:82, goals:0, assists:1, cards:0, comment:'↪️🅰️ (7,6+🅰️)'},
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'}
@@ -1266,7 +1288,8 @@
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:2, minutes:11, goals:0, assists:0, cards:0, comment:'↩️ (6,5)'},
-        {points:1, minutes:20, goals:0, assists:0, cards:0, comment:'↩️ (6,2)'}
+        {points:1, minutes:20, goals:0, assists:0, cards:0, comment:'↩️ (6,2)'},
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'}
       ]},
 
     { id:24, name:'Manu de V.', pos:'Atacante', status:'OK', special: false, performances:[
@@ -1285,7 +1308,8 @@
         {points:2, minutes:32, goals:0, assists:0, cards:0, comment:'↩️ (6,4)'},
         {points:1, minutes:59, goals:0, assists:0, cards:0, comment:'↪️ (6,2)'},
         {points:0, minutes:90, goals:0, assists:0, cards:1, comment:'🟨 (6,0)'},
-        {points:2, minutes:64, goals:0, assists:0, cards:0, comment:'↪️ (6,4)'}
+        {points:2, minutes:64, goals:0, assists:0, cards:0, comment:'↪️ (6,4)'},
+        {points:null, minutes:64, goals:0, assists:0, cards:1, comment:'🟨↪️ (-)'}
       ]},
 
     { id:25, name:'S. Griñán', pos:'Atacante', status:'OK', special: false, performances:[
@@ -1304,7 +1328,8 @@
         {points:2, minutes:58, goals:0, assists:0, cards:0, comment:'↪️ (6,5)'},
         {points:9, minutes:31, goals:1, assists:0, cards:0, comment:'↩️⚽ (7,2+⚽)'},
         {points:2, minutes:29, goals:0, assists:0, cards:0, comment:'↩️ (6,5)'},
-        {points:1, minutes:26, goals:0, assists:0, cards:0, comment:'↩️ (6,3)'}
+        {points:1, minutes:26, goals:0, assists:0, cards:0, comment:'↩️ (6,3)'},
+        {points:null, minutes:26, goals:0, assists:1, cards:0, comment:'↩️🅰️ (0,0+🅰️)'}
       ]},
 
     { id:26, name:'Manu (JB)', pos:'Defensa', status:'OK', special: true, performances:[
