--- a/FantasyEfmo.html
+++ b/FantasyEfmo.html
@@ -872,7 +872,7 @@
         {points:null, minutes:90, goals:0, assists:0, cards:0, comment:'(-)'}
       ]},
 
-    { id:3, name:'Álvaro', pos:'Portero', status:'OK', special: false, performances:[
+    { id:3, name:'Álvaro', pos:'Portero', status:'Duda', special: false, performances:[
         {points:2, minutes:90, goals:0, assists:0, cards:0, comment:'(6,5)'},
         {points:null, minutes:36, goals:0, assists:0, cards:0, comment:'↩️ (Sin grabación)'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
@@ -1152,7 +1152,7 @@
         {points:null, minutes:45, goals:0, assists:0, cards:1, comment:'🟨↪️ (-)'}
       ]},
 
-    { id:17, name:'Pablo', pos:'Centrocampista', status:'Lesionado', special: false, performances:[
+    { id:17, name:'Pablo', pos:'Centrocampista', status:'OK', special: false, performances:[
         {points:4, minutes:69, goals:0, assists:0, cards:1, comment:'🟨↪️ (6,9)'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
@@ -1372,14 +1372,15 @@
   
   // 📰 Noticias del equipo
   const news = [
-    { playerId: 16, title: 'Duda', text: "Sobrecarga, 3-5 días" },
-    { playerId: 12, title: 'Duda', text: "Molestias en la pierna, 2-5 días" },
+    { playerId: null, title: 'Jornada 17', text: " CDE F.B. Dptvo. Torrelodones 5-3 E.F.M.O. Boadilla 'B'", url: 'InformeJ17.html' },
+    { playerId: 16, title: 'Duda', text: "Sobrecarga y molestias en la pierna, 1-2 semanas" },
+    { playerId: 12, title: 'Duda', text: "Molestias en la pierna, 1-2 semanas" },
     { playerId: null, title: 'Jornada 16', text: "E.F.M.O. Boadilla 'B' 1-2 CF Rayo Majadahonda 'B'", url: 'InformeJ16.html' },
     { playerId: 9, title: 'Lesión', text: "Rotura de isquios, 6-8 semanas" },
-   // { playerId: 3, title: 'Duda', text: "Enfermedad, 3-5 días" }, //Álvaro
+    { playerId: 3, title: 'Duda', text: "Enfermedad, 1-2 semanas" }, //Álvaro
     { playerId: null, title: 'Jornada 15', text: "E.F.M.O. Boadilla 'B' 0-0 CD Nuevo Boadilla 'D'", url: 'InformeJ15.html' },
     { playerId: null, title: 'Stats J14', text: "Estadísticas detalladas de la J14", url: 'StatsJ14.html' },
-    { playerId: 17, title: 'Lesión', text: "Molestias en el rotuliano" },
+   // { playerId: 17, title: 'Duda', text: "Molestias en el rotuliano" },
     { playerId: 13, title: 'Lesión', text: "Fisura en la órbita, 3-5 semanas" },
     { playerId: null, title: 'Jornada 14', text: "CD Galapagar 'C' 4-1 E.F.M.O. Boadilla 'B'", url: 'InformeJ14.html' },
    // { playerId: 10, title: 'Duda', text: "Molestias de cuello, 7-10 días" }, //Infante
@@ -1396,7 +1397,6 @@
     { playerId: null, title: 'Jornada 8', text: "E.F.M.O. Boadilla 'B' 2-2 CDE Aupa - Mentema Boadilla 'A'", url: 'InformeJ8.html' },
    // { playerId: 3, title: 'Duda', text: "Esguince de tobillo y molestias en el cuello, desconocido" }, //Álvaro
     { playerId: null, title: 'Jornada 7', text: "CDE Fútbol Club Samba-Las Rozas 1-1 E.F.M.O. Boadilla 'B'", url: 'InformeJ7.html' },
-   // { playerId: 6, title: 'Duda', text: "Lesión de tobillo, 3-5 semanas" }, //Rafa
     { playerId: null, title: 'Jornada 6', text: "E.F.M.O. Boadilla 'B' 2-1 CD Prodet Pozuelo", url: 'InformeJ6.html' },
     { playerId: null, title: 'Jornada 5', text: "CD Retamar 3-2 E.F.M.O. Boadilla 'B'", url: 'InformeJ5.html' },
     { playerId: null, title: 'Jornada 4', text: "E.F.M.O. Boadilla 'B' 0-1 CD Puerta de Madrid 'B'", url: 'InformeJ4.html' },
