--- a/StatsJ17.html
+++ b/StatsJ17.html
@@ -112,8 +112,52 @@
   
 <div class="container">
 
-  
+  <div class="player-card">
+        <div class="player-header">
+            <div><span class="player-name">Á. Brito</span><span class="player-pos">MCD</span></div>
+            <div class="rating-badge">6,5</div>
+        </div>
+        <div class="stats-container">
+            <div class="stat-row"><span class="stat-label">Minutos</span><span class="stat-value">45</span></div>
+            <div class="stat-row"><span class="stat-label">Goles en contra</span><span class="stat-value">2</span></div>
+            <div class="stat-row"><span class="stat-label">Recuperaciones</span><span class="stat-value">11</span></div>
+            <div class="stat-row"><span class="stat-label">Pases cortos</span><span class="stat-value">18/19</span></div>
+            <div class="stat-row"><span class="stat-label">Regates</span><span class="stat-value">2/2</span></div>
+            <div class="stat-row"><span class="stat-label">Intercepciones</span><span class="stat-value">2</span></div>
+            <div class="stat-row"><span class="stat-label">Despejes</span><span class="stat-value">3</span></div>
+            <div class="stat-row"><span class="stat-label">Duelos aéreos</span><span class="stat-value">2/2</span></div>
+            <div class="stat-row"><span class="stat-label">Faltas recibidas</span><span class="stat-value">2</span></div>
+            <div class="stat-row"><span class="stat-label">Tarjetas amarillas</span><span class="stat-value">1</span></div>
+            <div class="stat-row"><span class="stat-label">Pases largos</span><span class="stat-value">2/7</span></div>
+            <div class="stat-row"><span class="stat-label">Duelos suelo</span><span class="stat-value">3/8</span></div>
+            <div class="stat-row"><span class="stat-label">Faltas</span><span class="stat-value">3</span></div>
+            <div class="stat-row"><span class="stat-label">Regateado</span><span class="stat-value">2</span></div>
+            <div class="stat-row"><span class="stat-label">Posesiones perdidas</span><span class="stat-value">3</span></div>
+            <div class="stat-row"><span class="stat-label">Entradas</span><span class="stat-value">0/2</span></div>
+        </div>
+    </div>
+
+    <div class="player-card">
+        <div class="player-header">
+            <div><span class="player-name">Víctor Jaén</span><span class="player-pos">MCD</span></div>
+            <div class="rating-badge">7,2</div>
+        </div>
+        <div class="stats-container">
+            <div class="stat-row"><span class="stat-label">Minutos</span><span class="stat-value">45</span></div>
+            <div class="stat-row"><span class="stat-label">Goles</span><span class="stat-value">1</span></div>
+            <div class="stat-row"><span class="stat-label">Goles en contra</span><span class="stat-value">2</span></div>
+            <div class="stat-row"><span class="stat-label">Tiros a puerta</span><span class="stat-value">1</span></div>
+            <div class="stat-row"><span class="stat-label">Recuperaciones</span><span class="stat-value">5</span></div>
+            <div class="stat-row"><span class="stat-label">Pases cortos</span><span class="stat-value">11/12</span></div>
+            <div class="stat-row"><span class="stat-label">Pases largos</span><span class="stat-value">2/3</span></div>
+            <div class="stat-row"><span class="stat-label">Intercepciones</span><span class="stat-value">1</span></div>
+            <div class="stat-row"><span class="stat-label">Despejes</span><span class="stat-value">1</span></div>
+            <div class="stat-row"><span class="stat-label">Duelos suelo</span><span class="stat-value">0/2</span></div>
+            <div class="stat-row"><span class="stat-label">Entradas</span><span class="stat-value">0/2</span></div>
+        </div>
+    </div>
   
 </div>
+    
 </body>
 </html>
