--- a/InformeJ17.html
+++ b/InformeJ17.html
@@ -747,9 +747,9 @@
         ], //El último sin coma
         'mediocentros': [
           { number: '12', name: 'L. Lausín', rating: '-', goals: 0, assists: 0, cards: null },
-          { number: '21', name: 'Víctor Jaén', rating: '-', goals: 1, assists: 0, cards: null },
+          { number: '21', name: 'Víctor Jaén', rating: '7,2', goals: 1, assists: 0, cards: null },
           { number: '23', name: 'Javi Pardo', rating: '-', goals: 0, assists: 0, cards: null },
-          { number: '2', name: 'Á. Brito', rating: '-', goals: 0, assists: 0, cards: '🟨' },
+          { number: '2', name: 'Á. Brito', rating: '6,5', goals: 0, assists: 0, cards: '🟨' },
           { number: '10', name: 'Kito', rating: '-', goals: 1, assists: 0, cards: null }
         ], //El último sin coma
         'delanteros': [
