--- a/FantasyEfmo.html
+++ b/FantasyEfmo.html
@@ -1129,7 +1129,7 @@
         {points:-1, minutes:11, goals:0, assists:0, cards:0, comment:'↩️ (5,9)'},
         {points:1, minutes:29, goals:0, assists:0, cards:1, comment:'🟨↩️ (6,3)'},
         {points:10, minutes:90, goals:1, assists:0, cards:0, comment:'⚽ (7,2+⚽)'},
-        {points:null, minutes:45, goals:1, assists:0, cards:0, comment:'↪️⚽ (0,0+⚽)'}
+        {points:10, minutes:45, goals:1, assists:0, cards:0, comment:'↪️⚽ (7,2+⚽)'}
       ]},
 
     { id:16, name:'Á. Brito', pos:'Centrocampista', status:'Duda', special: false, performances:[
@@ -1149,7 +1149,7 @@
         {points:5, minutes:73, goals:0, assists:0, cards:0, comment:'↪️ (7,0)'},
         {points:7, minutes:79, goals:0, assists:0, cards:0, comment:'↪️ (7,5)'},
         {points:9, minutes:90, goals:0, assists:0, cards:0, comment:'(7,8)'},
-        {points:null, minutes:45, goals:0, assists:0, cards:1, comment:'🟨↪️ (-)'}
+        {points:3, minutes:45, goals:0, assists:0, cards:1, comment:'🟨↪️ (6,6)'}
       ]},
 
     { id:17, name:'Pablo', pos:'Centrocampista', status:'OK', special: false, performances:[
@@ -1372,6 +1372,7 @@
   
   // 📰 Noticias del equipo
   const news = [
+    { playerId: null, title: 'Stats J17', text: "Estadísticas detalladas de la J17", url: 'StatsJ17.html' },
     { playerId: null, title: 'Jornada 17', text: " CDE F.B. Dptvo. Torrelodones 5-3 E.F.M.O. Boadilla 'B'", url: 'InformeJ17.html' },
     { playerId: 16, title: 'Duda', text: "Sobrecarga y molestias en la pierna, 1-2 semanas" },
     { playerId: 12, title: 'Duda', text: "Molestias en la pierna, 1-2 semanas" },
